Support more criteria API expressions